CLEANFILES = *~
DISTCLEANFILES = *~

noinst_LIBRARIES = libulv.a

libulv_a_SOURCES = ulv_init.c ulv_types.h ulv_assert.h \
		ulv_syscall.c ulv_syscall.h ulv_syscall_no.h ulv_host_syscall.h \
		ulv_syscall_write.c ulv_syscall_uname.c \
		ulv_syscall_exit.c ulv_syscall_ioctl.c ulv_syscall_socket.c \
		ulv_syscall_mmap.c ulv_syscall_set_tid_address.c
